fix: workaround for RomanNumeralParser and color fixes for enchants #124